fix: increase modal context height and preserve old print_r log white space

--- a/src/Views/Components/Modal/styles.module.scss
+++ b/src/Views/Components/Modal/styles.module.scss
@@ -96,7 +96,7 @@
     padding: 10px 20px;
     height: auto;
     min-height: 40px;
-    max-height: 240px;
+    max-height: 500px;
     overflow-x: auto;
     font-size: 15px;
 
@@ -104,6 +104,10 @@
         font-weight: 600;
         margin-right: 10px;
         margin-bottom: 10px;
+    }
+
+    pre {
+        white-space: break-spaces;
     }
 }
 
